fix: 去掉device right overflow

--- a/src/styles/_device.scss
+++ b/src/styles/_device.scss
@@ -246,7 +246,7 @@
 
   &__right {
     flex: 1;
-    overflow: hidden;
+    min-width: 0;
 
     .filter-container__search-group {
       margin-right: 10px;
